tests/mysql/ui-common/macro_without_sql.stderr
error: expected `,`
 --> tests/mysql/tmp-ui/macro_without_sql.rs:6:13
  |
6 |     let _ = sql_forge!(sqlx::Postgres, support::User);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql_forge` (in Nightly builds, run with -Z macro-backtrace for more info)
